Update language service

--- a/packages/language-service/server/package.json
+++ b/packages/language-service/server/package.json
@@ -13,16 +13,15 @@
         "node": "*"
     },
     "devDependencies": {
-        "@types/js-beautify": "^1.13.3",
-        "@types/minimatch": "^5.1.2",
-        "vscode-languageserver": "^7.0.0",
-        "vscode-languageserver-textdocument": "^1.0.4",
         "@master/css": "",
         "@master/css-compiler": "",
         "file-uri-to-path": "^2.0.0",
-        "js-beautify": "^1.14.3",
-        "minimatch": "^5.1.0",
-        "pascal-case": "^3.1.2"
+        "js-beautify": "^1.14.7",
+        "minimatch": "^5.1.2",
+        "pascal-case": "^3.1.2",
+        "vscode-css-languageservice": "^6.2.3",
+        "vscode-languageserver": "^7.0.0",
+        "vscode-languageserver-textdocument": "^1.0.4"
     },
     "main": "./dist/server.js",
     "jsnext:main": "./dist/server.mjs",
