--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@master/css",
     "scripts": {
-        "build": "aron pack --extra-external @master/css-compiler",
+        "build": "aron pack --extra-external @master/css-compiler --shakable",
         "dev": "npm run build -- --watch",
         "test": "jest",
         "type-check": "tsc --noEmit",
@@ -59,7 +59,7 @@
                 "types": "./dist/index.browser.d.ts"
             },
             "require": "./dist/cjs/index.js",
-            "import": "./dist/esm/index.js",
+            "import": "./dist/esm/index.mjs",
             "types": "./dist/index.d.ts"
         }
     },
