--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@master/css.react",
     "scripts": {
-        "build": "aron pack",
+        "build": "aron pack --shakable",
         "dev": "npm run build -- --watch",
         "type-check": "tsc --noEmit",
         "lint": "eslint src"
@@ -28,14 +28,14 @@
     ],
     "sideEffects": false,
     "main": "./dist/cjs/index.js",
-    "jsnext:main": "./dist/esm/index.js",
-    "esnext": "./dist/esm/index.js",
-    "module": "./dist/esm/index.js",
+    "jsnext:main": "./dist/esm/index.mjs",
+    "esnext": "./dist/esm/index.mjs",
+    "module": "./dist/esm/index.mjs",
     "types": "./dist/index.d.ts",
     "exports": {
         ".": {
             "require": "./dist/cjs/index.js",
-            "import": "./dist/esm/index.js",
+            "import": "./dist/esm/index.mjs",
             "types": "./dist/index.d.ts"
         }
     },
