--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -7,7 +7,7 @@
         "lint": "eslint src"
     },
     "license": "MIT",
-    "description": "React hooks and components for Master CSS",
+    "description": "Integration of Master CSS in React",
     "author": "Aoyue Design LLC.",
     "funding": "https://docs.master.co/css/donate",
     "homepage": "https://css.master.co",
