New(Svelte): `CSSProvider` and `LazyCSSProvider` standardly register Master CSS in Svelte

--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@master/css",
     "scripts": {
-        "build": "aron pack --extra-external @master/css-compiler --shakable",
+        "build": "techor pack --extra-external @master/css-compiler --shakable",
         "dev": "npm run build -- --watch",
         "test": "jest",
         "type-check": "tsc --noEmit",
