--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
         "examples/*"
     ],
     "devDependencies": {
-        "aron-web-jest": "^1.1.1",
-        "aronrepo": "^1.5.1",
+        "@techor/repo": "^1.2.1",
         "dedent": "^0.7.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "fast-glob": "^3.2.12",
         "jest-puppeteer": "^8.0.4",
         "strip-ansi": "^7.0.1",
+        "techor": "^1.2.5",
+        "techor-web-jest": "^1.2.1",
         "upath": "^2.0.1"
     },
     "engines": {
