--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@master/css-compiler",
     "scripts": {
-        "build": "aron pack --platform node --shakable",
+        "build": "techor pack --platform node --shakable",
         "dev": "npm run build -- --watch",
         "lint": "eslint ./src",
         "test": "jest"
