--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -2,8 +2,8 @@
     "name": "@master/css.svelte",
     "type": "module",
     "scripts": {
-        "build": "tsc",
-        "dev": "tsc -w",
+        "build": "techor pack ./src/**/*.{ts,svelte} --format esm --esm-ext .js --no-bundle",
+        "dev": "npm run build -- -w",
         "type-check": "tsc --noEmit"
     },
     "license": "MIT",
@@ -26,16 +26,15 @@
         "mastercss"
     ],
     "sideEffects": false,
-    "main": "./src/index.js",
-    "jsnext:main": "./src/index.js",
-    "esnext": "./src/index.js",
-    "module": "./src/index.js",
-    "types": "./src/index.d.ts",
+    "main": "./dist/index.js",
+    "jsnext:main": "./dist/index.js",
+    "esnext": "./dist/index.js",
+    "module": "./dist/index.js",
+    "types": "./dist/index.d.ts",
     "exports": {
         ".": {
-            "require": "./src/index.js",
-            "import": "./src/index.js",
-            "types": "./src/index.d.ts"
+            "import": "./dist/index.js",
+            "types": "./dist/index.d.ts"
         }
     },
     "files": [
@@ -48,10 +47,11 @@
         "svelte": ">= 3.0.0"
     },
     "dependencies": {
-        "@master/css": ""
+        "@master/css": "",
+        "techor": "^1.2.5"
     },
     "devDependencies": {
         "@tsconfig/svelte": "^3.0.0",
-        "typescript": "^5.0.2"
+        "esbuild-plugin-copy": "^2.1.1"
     }
 }
