--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "dedent": "^0.7.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "fast-glob": "^3.2.12",
+        "jest": "^28.1.3",
         "jest-puppeteer": "^8.0.4",
         "strip-ansi": "^7.0.1",
         "techor": "^1.2.5",
