--- a/examples/next.js-with-progressive-rendering/package.json
+++ b/examples/next.js-with-progressive-rendering/package.json
@@ -7,10 +7,12 @@
         "build": "next build",
         "start": "next start --port 3208",
         "lint": "next lint",
-        "preview": "npm run build && npm run start"
+        "preview": "npm run build && npm run start",
+        "test": "jest"
     },
     "dependencies": {
         "@master/css.react": "",
+        "@next/env": "^13.2.3",
         "@types/node": "18.14.6",
         "@types/react": "18.0.28",
         "@types/react-dom": "18.0.11",
