Tests(Svelte): Add build tests

--- a/examples/svelte-with-just-in-time/package.json
+++ b/examples/svelte-with-just-in-time/package.json
@@ -6,7 +6,8 @@
         "build": "vite build",
         "preview": "vite preview",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+        "test": "jest"
     },
     "devDependencies": {
         "@master/css": "",
