--- a/examples/svelte-with-just-in-time/package.json
+++ b/examples/svelte-with-just-in-time/package.json
@@ -7,7 +7,7 @@
         "preview": "vite preview",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-        "test": "jest"
+        "test": "npm run build && jest"
     },
     "devDependencies": {
         "@master/css": "",
