--- a/examples/svelte-with-ahead-of-time/package.json
+++ b/examples/svelte-with-ahead-of-time/package.json
@@ -1,27 +1,26 @@
 {
-    "name": "svelte-kit-with-ahead-of-time",
-    "private": true,
+    "name": "svelte-with-ahead-of-time",
+    "version": "0.0.1",
     "scripts": {
         "dev": "vite dev",
         "build": "vite build",
         "preview": "vite preview",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-        "test": "npm run build && jest"
+        "test": "jest"
     },
     "devDependencies": {
         "@master/css.vite": "",
-        "@master/css.svelte": "",
-		"@fontsource/fira-mono": "^4.5.10",
-		"@neoconfetti/svelte": "^1.0.0",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.5.0",
-		"@types/cookie": "^0.5.1",
-		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.2.0"
+        "@fontsource/fira-mono": "^4.5.10",
+        "@neoconfetti/svelte": "^1.0.0",
+        "@sveltejs/adapter-auto": "^2.0.0",
+        "@sveltejs/kit": "^1.5.0",
+        "@types/cookie": "^0.5.1",
+        "svelte": "^3.54.0",
+        "svelte-check": "^3.0.1",
+        "tslib": "^2.4.1",
+        "typescript": "^5.0.0",
+        "vite": "^4.2.0"
     },
     "type": "module"
 }
