--- a/examples/svelte-with-just-in-time/package.json
+++ b/examples/svelte-with-just-in-time/package.json
@@ -1,17 +1,18 @@
 {
-    "name": "svelte-kit-with-just-in-time",
-    "private": true,
-    "scripts": {
-        "dev": "vite dev",
-        "build": "vite build",
-        "preview": "vite preview",
-        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-        "test": "npm run build && jest"
+	"name": "svelte-with-just-in-time",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+        "test": "jest"
+	},
+    "dependencies": {
+        "@master/css.svelte": ""
     },
-    "devDependencies": {
-        "@master/css": "",
-        "@master/css.svelte": "",
+	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
@@ -22,6 +23,6 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.2.0"
-    },
-    "type": "module"
+	},
+	"type": "module"
 }
