--- a/examples/svelte-with-ahead-of-time/package.json
+++ b/examples/svelte-with-ahead-of-time/package.json
@@ -1,6 +1,7 @@
 {
     "name": "svelte-with-ahead-of-time",
     "version": "0.0.1",
+    "private": true,
     "scripts": {
         "dev": "vite dev",
         "build": "vite build",
