--- a/examples/svelte-with-progressive-rendering/package.json
+++ b/examples/svelte-with-progressive-rendering/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "svelte-with-progressive-rendering",
 	"version": "0.0.1",
+	"private": true,
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
