--- a/examples/svelte-with-progressive-rendering/package.json
+++ b/examples/svelte-with-progressive-rendering/package.json
@@ -7,8 +7,7 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-        "test": "jest"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
     "dependencies": {
         "@master/css.svelte": ""
