--- a/examples/webpack/package.json
+++ b/examples/webpack/package.json
@@ -7,6 +7,7 @@
         "preview": "webpack serve --mode=production"
     },
     "devDependencies": {
+        "@master/css.webpack": "*",
         "css-loader": "^6.7.1",
         "html-webpack-plugin": "^5.5.0",
         "style-loader": "^3.3.1",
