--- a/examples/angular/package.json
+++ b/examples/angular/package.json
@@ -26,6 +26,7 @@
         "@angular-devkit/build-angular": "^15.1.4",
         "@angular/cli": "~15.1.4",
         "@angular/compiler-cli": "^15.1.0",
+        "@master/css.webpack": "*",
         "@types/jasmine": "~4.3.0",
         "jasmine-core": "~4.5.0",
         "karma": "~6.4.0",
