--- a/examples/remix/package.json
+++ b/examples/remix/package.json
@@ -17,6 +17,7 @@
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
+        "@master/css": "*",
         "@remix-run/dev": "^1.12.0",
         "@remix-run/eslint-config": "^1.12.0",
         "@types/react": "^18.0.25",
