--- a/examples/jit/package.json
+++ b/examples/jit/package.json
@@ -1,19 +1,18 @@
 {
-    "name": "master-css-in-lit",
+    "name": "master-css-jit",
     "private": true,
     "version": "0.0.0",
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "tsc && vite build",
-        "preview": "vite preview"
+        "build": "vite build",
+        "preview": "vite preview",
+        "test": "jest --env node"
     },
     "dependencies": {
-        "lit": "^2.6.1"
+        "@master/css": ""
     },
     "devDependencies": {
-        "@master/css.vite": "*",
-        "typescript": "^4.9.3",
         "vite": "^4.0.1"
     }
 }
