--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -84,6 +84,7 @@
     },
     "devDependencies": {
         "@techor/extend": "^2.0.5",
-        "ts-dedent": "^2.2.0"
+        "ts-dedent": "^2.2.0",
+        "vite": "^4.2.1"
     }
 }
