--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     ],
     "devDependencies": {
         "@techor/repo": "^2.0.5",
-        "dedent": "^0.7.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "fast-glob": "^3.2.12",
         "jest": "^28.1.3",
@@ -31,6 +30,7 @@
         "techor": "^2.0.4",
         "techor-jest": "^2.0.4",
         "techor-web-jest": "^2.0.4",
+        "ts-dedent": "^2.2.0",
         "upath": "^2.0.1"
     },
     "engines": {
