--- a/package.json
+++ b/package.json
@@ -21,15 +21,14 @@
         "examples/*"
     ],
     "devDependencies": {
-        "@techor/repo": "^2.0.5",
+        "@techor/jest": "^2.1.1",
+        "@techor/jest-dom": "^2.1.1",
+        "@techor/jest-puppeteer": "^2.1.1",
+        "@techor/repo": "^2.1.1",
         "eslint-plugin-react-hooks": "^4.6.0",
         "fast-glob": "^3.2.12",
-        "jest": "^28.1.3",
-        "jest-puppeteer": "^8.0.4",
         "strip-ansi": "^7.0.1",
         "techor": "^2.0.4",
-        "techor-jest": "^2.0.4",
-        "techor-web-jest": "^2.0.4",
         "ts-dedent": "^2.2.0",
         "upath": "^2.0.1"
     },
