--- a/examples/jit/package.json
+++ b/examples/jit/package.json
@@ -7,7 +7,7 @@
         "dev": "vite",
         "build": "vite build",
         "preview": "vite preview",
-        "test": "jest"
+        "test": "jest --no-cache"
     },
     "dependencies": {
         "@master/css": ""
