--- a/examples/vite/package.json
+++ b/examples/vite/package.json
@@ -7,7 +7,7 @@
         "dev": "vite",
         "build": "tsc && vite build",
         "preview": "vite preview",
-        "test": "jest"
+        "test": "jest --no-cache"
     },
     "devDependencies": {
         "@master/css.vite": "",
