Tests(Compiler): Check configuration and options read

--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -66,11 +66,12 @@
     },
     "dependencies": {
         "@master/css": "",
-        "@techor/extend": "^2.1.4",
+        "@techor/extend": "^2.1.6",
+        "cross-import": "^2.1.6",
         "fast-glob": "^3.2.12",
         "minimatch": "^5.1.1",
         "stylelint": "^15.2.0",
-        "techor": "^2.1.4",
+        "techor": "^2.1.6",
         "upath": "^2.0.1"
     },
     "devDependencies": {
