--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -75,15 +75,13 @@
     },
     "dependencies": {
         "@master/normal.css": "",
-        "@techor/fs": "^2.1.4",
-        "@techor/log": "^2.1.4",
+        "@techor/fs": "^2.1.7",
+        "@techor/log": "^2.1.7",
         "chokidar": "^3.5.3",
-        "commander": "^10.0.0",
-        "fast-glob": "^3.2.12"
+        "commander": "^10.0.0"
     },
     "devDependencies": {
-        "@techor/extend": "^2.1.4",
-        "ts-dedent": "^2.2.0",
+        "@techor/extend": "^2.1.7",
         "vite": "^4.2.1"
     }
 }
