Check compiler types

--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -4,6 +4,7 @@
         "build": "techor pack --platform node",
         "dev": "npm run build -- --watch",
         "lint": "eslint ./src",
+        "type-check": "tsc --noEmit",
         "test": "jest"
     },
     "license": "MIT",
