--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
         "examples/*"
     ],
     "devDependencies": {
-        "@techor/jest": "^2.1.13",
-        "@techor/jest-dom": "^2.1.13",
-        "@techor/repo": "^2.1.13",
+        "@techor/jest": "^2.1.14",
+        "@techor/jest-dom": "^2.1.14",
+        "@techor/repo": "^2.1.14",
         "@types/jest": "^29.5.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "fast-glob": "^3.2.12",
+        "puppeteer": "^19.8.5",
         "shuffle-array": "^1.0.1",
         "strip-ansi": "^7.0.1",
-        "techor": "^2.1.13",
+        "techor": "^2.1.14",
         "ts-dedent": "^2.2.0",
         "upath": "^2.0.1"
     },
