--- a/packages/language-service/package.json
+++ b/packages/language-service/package.json
@@ -1,190 +1,54 @@
 {
-    "name": "master-css-language-service",
-    "description": "Master CSS Language Service for Visual Studio Code",
-    "displayName": "Master CSS Language Service",
+    "name": "@master/css-language-service",
+    "scripts": {
+        "build": "techor pack --platform node",
+        "dev": "npm run build -- --watch",
+        "type-check": "tsc --noEmit",
+        "lint": "eslint src"
+    },
+    "description": "Master CSS Language Service",
     "author": "Aoyue Design LLC.",
-    "funding": "https://docs.master.co/css/donate",
-    "homepage": "https://css.master.co",
     "license": "MIT",
-    "publisher": "masterco",
-    "version": "2.1.35",
-    "icon": "icon.png",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/master-co/css.git",
-        "directory": "packages/language-service"
-    },
     "engines": {
-        "vscode": "^1.63.0"
+        "node": "*"
     },
-    "activationEvents": [
-        "onStartupFinished"
-    ],
-    "main": "./client/dist/extension.js",
-    "jsnext:main": "./client/dist/extension.mjs",
-    "esnext": "./client/dist/extension.mjs",
-    "module": "./client/dist/extension.mjs",
-    "types": "./client/dist/extension.d.ts",
+    "dependencies": {
+        "@master/css": "",
+        "@master/css-compiler": "",
+        "file-uri-to-path": "^2.0.0",
+        "js-beautify": "^1.14.7",
+        "minimatch": "^5.1.2",
+        "pascal-case": "^3.1.2",
+        "vscode-css-languageservice": "^6.2.3"
+    },
+    "devDependencies": {
+        "vscode-languageserver-types": "^3.17.3"
+    },
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
     "exports": {
         ".": {
-            "require": "./client/dist/extension.js",
-            "import": "./client/dist/extension.mjs",
-            "types": "./client/dist/extension.d.ts"
+            "require": "./dist/index.js",
+            "import": "./dist/index.js",
+            "types": "./dist/index.d.ts"
+        },
+        "./settings": {
+            "require": "./dist/settings.js",
+            "import": "./dist/settings.js",
+            "types": "./dist/settings.d.ts"
+        }
+    },
+    "typesVersions": {
+        "*": {
+            "./settings": [
+                "./dist/settings.d.ts"
+            ]
         }
     },
     "files": [
         "dist"
     ],
-    "contributes": {
-        "languages": [
-            {
-                "id": "master-css",
-                "aliases": [
-                    "master-css",
-                    "mastercss"
-                ],
-                "extensions": [
-                    ".mastercss"
-                ]
-            }
-        ],
-        "grammars": [
-            {
-                "language": "master-css",
-                "scopeName": "source.master-css",
-                "path": "./syntaxes/master-css.tmLanguage.json"
-            },
-            {
-                "scopeName": "source.master-css.injection-class",
-                "path": "./syntaxes/master-css.injection-class.tmLanguage.json",
-                "injectTo": [
-                    "source",
-                    "text"
-                ]
-            },
-            {
-                "scopeName": "source.master-css.injection-react",
-                "path": "./syntaxes/master-css.injection-react.tmLanguage.json",
-                "injectTo": [
-                    "source.js.jsx",
-                    "source.ts.tsx",
-                    "source.jsx",
-                    "source.tsx"
-                ]
-            },
-            {
-                "scopeName": "source.master-css.injection-vue",
-                "path": "./syntaxes/master-css.injection-vue.tmLanguage.json",
-                "injectTo": [
-                    "source.vue"
-                ]
-            },
-            {
-                "scopeName": "source.master-css.injection-js",
-                "path": "./syntaxes/master-css.injection-js.tmLanguage.json",
-                "injectTo": [
-                    "source.js.jsx",
-                    "source.ts.tsx",
-                    "source.jsx",
-                    "source.tsx",
-                    "source.js",
-                    "source.ts",
-                    "source.svelte"
-                ],
-                "embeddedLanguages": {
-                    "meta.embedded.block.master-css.class": "master-css"
-                }
-            },
-            {
-                "scopeName": "source.master-css.injection-string",
-                "path": "./syntaxes/master-css.injection-string.tmLanguage.json",
-                "injectTo": [
-                    "source.js.jsx",
-                    "source.ts.tsx",
-                    "source.jsx",
-                    "source.tsx",
-                    "source.js",
-                    "source.ts",
-                    "source.svelte",
-                    "source.vue"
-                ]
-            }
-        ],
-        "configuration": {
-            "title": "Master CSS IntelliSense",
-            "properties": {
-                "masterCSS.languages": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    },
-                    "default": [
-                        "html",
-                        "php",
-                        "javascript",
-                        "typescript",
-                        "javascriptreact",
-                        "typescriptreact",
-                        "vue",
-                        "svelte",
-                        "rust"
-                    ]
-                },
-                "masterCSS.files.exclude": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    },
-                    "default": [
-                        "**/.git/**",
-                        "**/node_modules/**",
-                        "**/.hg/**"
-                    ],
-                    "description": "Configure glob patterns to exclude from all Master Language Service features."
-                },
-                "masterCSS.classMatch": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    },
-                    "default": [
-                        "(class(?:Name)?\\s?=\\s?)((?:\"[^\"]+\")|(?:'[^']+')|(?:`[^`]+`))",
-                        "(class(?:Name)?={)([^}]*)}",
-                        "(?:(\\$|(?:(?:element|el|style)\\.[^\\s.`]+)`)([^`]+)`)",
-                        "(style\\.(?:.*)\\()([^)]*)\\)",
-                        "(classList.(?:add|remove|replace|replace|toggle)\\()([^)]*)\\)",
-                        "(template\\s*\\:\\s*)((?:\"[^\"]+\")|(?:'[^']+')|(?:`[^`]+`))",
-                        "(?<=classes\\s*(?:=|:)\\s*{[\\s\\S]*)([^']*)('[^']*')",
-                        "(?<=classes\\s*(?:=|:)\\s*{[\\s\\S]*)([^\"]*)(\"[^\"]*\")",
-                        "(?<=classes\\s*(?:=|:)\\s*{[\\s\\S]*)([^`]*)(`[^`]*`)"
-                    ]
-                },
-                "masterCSS.suggestions": {
-                    "type": "boolean",
-                    "default": true
-                },
-                "masterCSS.inspect": {
-                    "type": "boolean",
-                    "default": true
-                },
-                "masterCSS.previewColors": {
-                    "type": "boolean",
-                    "default": true
-                },
-                "masterCSS.config": {
-                    "type": "string",
-                    "default": "master.css.{ts,js,mjs,cjs}"
-                }
-            }
-        }
-    },
-    "scripts": {
-        "deploy": "mv ../../package.json ../../_package.json && npm i vsce -D && vsce publish && mv ../../_package.json ../../package.json"
-    },
     "publishConfig": {
         "access": "public"
-    },
-    "devDependencies": {
-        "vsce": "^2.15.0"
     }
 }
