--- a/packages/language-server/package.json
+++ b/packages/language-server/package.json
@@ -4,7 +4,8 @@
         "build": "techor pack --platform node",
         "dev": "npm run build -- --watch",
         "type-check": "tsc --noEmit",
-        "lint": "eslint src"
+        "lint": "eslint src",
+        "test": "jest"
     },
     "description": "Master CSS Language Server",
     "author": "Aoyue Design LLC.",
