--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ packages/css/**/*master.css.*
 packages/css/**/*master.*
 packages/compiler/**/*master.css-compiler.*
 packages/compiler/**/*master.css.*
+packages/css/tests/cjs/*.html
 
 # Only exists if Bazel was run
 /bazel-out
