--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,7 @@ packages/css/**/*master.css.*
 packages/css/**/*master.*
 packages/compiler/**/*master.css-compiler.*
 packages/compiler/**/*master.css.*
-packages/css/tests/cjs/*.html
-packages/compiler/tests/watch/*.html
+**/*.test.html
 
 # Only exists if Bazel was run
 /bazel-out
