--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -5,7 +5,7 @@
         "dev": "npm run build -- --watch",
         "lint": "eslint ./src",
         "type-check": "tsc --noEmit",
-        "test": "jest"
+        "test": "jest --forceExit --detectOpenHandles"
     },
     "license": "MIT",
     "description": "The ahead-of-time compiler of Master CSS",
