--- a/examples/next.js-with-just-in-time/package.json
+++ b/examples/next.js-with-just-in-time/package.json
@@ -6,17 +6,16 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start --port 3208",
-        "lint": "next lint",
-        "preview": "npm run build && npm run start"
+        "lint": "next lint"
     },
     "dependencies": {
         "@master/css.react": "",
-        "@types/node": "18.14.6",
-        "@types/react": "18.0.28",
-        "@types/react-dom": "18.0.11",
-        "next": "13.2.3",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "typescript": "4.9.5"
+        "@types/node": "^18.16.3",
+        "@types/react": "^18.2.0",
+        "@types/react-dom": "^18.2.1",
+        "next": "^13.3.4",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "typescript": "^5.0.4"
     }
 }
