--- a/examples/next.js-with-progressive-rendering/package.json
+++ b/examples/next.js-with-progressive-rendering/package.json
@@ -14,7 +14,7 @@
 		"@types/react-dom": "18.2.1",
 		"eslint": "8.39.0",
 		"eslint-config-next": "13.3.4",
-		"next": "13.3.4",
+		"next": "^13.4.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"typescript": "5.0.4",
