--- a/examples/next.js-with-progressive-rendering/package.json
+++ b/examples/next.js-with-progressive-rendering/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
-		"build": "next build && mcss render .next/**/*.html",
+		"build": "next build && npx mcss render .next/**/*.html",
 		"start": "next start",
 		"lint": "next lint"
 	},
