--- a/examples/next.js-with-progressive-rendering/package.json
+++ b/examples/next.js-with-progressive-rendering/package.json
@@ -18,6 +18,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"typescript": "5.0.4",
-		"@master/css.react": ""
+		"@master/css.react": "",
+		"@master/css": ""
 	}
 }
