FIx(React): Types

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -49,8 +49,11 @@
             ".": [
                 "./dist/index.d.ts"
             ],
-            "./*": [
-                "./dist/*.d.ts"
+            "CSSProvider": [
+                "./dist/CSSProvider.d.ts"
+            ],
+            "ThemeProvider": [
+                "./dist/ThemeProvider.d.ts"
             ]
         }
     },
