Improve(React): Rename `ThemeProvider` to `ThemeServiceProvider`

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -52,8 +52,8 @@
             "CSSProvider": [
                 "./dist/CSSProvider.d.ts"
             ],
-            "ThemeProvider": [
-                "./dist/ThemeProvider.d.ts"
+            "ThemeServiceProvider": [
+                "./dist/ThemeServiceProvider.d.ts"
             ]
         }
     },
