--- a/examples/angular-with-ahead-of-time/angular.json
+++ b/examples/angular-with-ahead-of-time/angular.json
@@ -67,7 +67,7 @@
                 "serve": {
                     "builder": "@angular-builders/custom-webpack:dev-server",
                     "options": {
-                        "browserTarget": "my-project:build"
+                        "browserTarget": "angular-with-ahead-of-time:build"
                     },
                     "configurations": {
                         "production": {
