--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -84,6 +84,7 @@
     },
     "devDependencies": {
         "@techor/extend": "^2.1.15",
+        "pretty-bytes": "^6.1.0",
         "vite": "^4.2.1"
     }
 }
