--- a/examples/angular-with-ahead-of-time/angular.json
+++ b/examples/angular-with-ahead-of-time/angular.json
@@ -5,11 +5,7 @@
     "projects": {
         "angular-with-ahead-of-time": {
             "projectType": "application",
-            "schematics": {
-                "@schematics/angular:component": {
-                    "style": "scss"
-                }
-            },
+            "schematics": {},
             "root": "",
             "sourceRoot": "src",
             "prefix": "app",
@@ -27,13 +23,12 @@
                             "zone.js"
                         ],
                         "tsConfig": "tsconfig.app.json",
-                        "inlineStyleLanguage": "scss",
                         "assets": [
                             "src/favicon.ico",
                             "src/assets"
                         ],
                         "styles": [
-                            "src/styles.scss"
+                            "src/styles.css"
                         ],
                         "scripts": []
                     },
@@ -93,13 +88,12 @@
                             "zone.js/testing"
                         ],
                         "tsConfig": "tsconfig.spec.json",
-                        "inlineStyleLanguage": "scss",
                         "assets": [
                             "src/favicon.ico",
                             "src/assets"
                         ],
                         "styles": [
-                            "src/styles.scss"
+                            "src/styles.css"
                         ],
                         "scripts": []
                     }
