--- a/examples/angular-with-ahead-of-time/package.json
+++ b/examples/angular-with-ahead-of-time/package.json
@@ -1,39 +1,40 @@
 {
-    "name": "angular-with-ahead-of-time",
-    "version": "0.0.0",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "watch": "ng build --watch --configuration development"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular-builders/custom-webpack": "^15.0.0",
-        "@angular/animations": "^15.1.0",
-        "@angular/common": "^15.1.0",
-        "@angular/compiler": "^15.1.0",
-        "@angular/core": "^15.1.0",
-        "@angular/forms": "^15.1.0",
-        "@angular/platform-browser": "^15.1.0",
-        "@angular/platform-browser-dynamic": "^15.1.0",
-        "@angular/router": "^15.1.0",
-        "rxjs": "~7.8.0",
-        "tslib": "^2.3.0",
-        "zone.js": "~0.12.0"
-    },
-    "devDependencies": {
-        "@master/css.webpack": "",
-        "@angular-devkit/build-angular": "^15.1.6",
-        "@angular/cli": "~15.1.6",
-        "@angular/compiler-cli": "^15.1.0",
-        "@types/jasmine": "~4.3.0",
-        "jasmine-core": "~4.5.0",
-        "karma": "~6.4.0",
-        "karma-chrome-launcher": "~3.1.0",
-        "karma-coverage": "~2.2.0",
-        "karma-jasmine": "~5.1.0",
-        "karma-jasmine-html-reporter": "~2.0.0",
-        "typescript": "~4.9.4"
-    }
+  "name": "angular-with-ahead-of-time",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular-builders/custom-webpack": "^16.0.0",
+    "@angular/animations": "^16.0.0",
+    "@angular/common": "^16.0.0",
+    "@angular/compiler": "^16.0.0",
+    "@angular/core": "^16.0.0",
+    "@angular/forms": "^16.0.0",
+    "@angular/platform-browser": "^16.0.0",
+    "@angular/platform-browser-dynamic": "^16.0.0",
+    "@angular/router": "^16.0.0",
+    "@master/css.webpack": "^2.0.0-beta.159",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.13.0"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^16.0.4",
+    "@angular/cli": "~16.0.4",
+    "@angular/compiler-cli": "^16.0.0",
+    "@types/jasmine": "~4.3.0",
+    "jasmine-core": "~4.6.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "typescript": "~5.0.2"
+  }
 }
