--- a/examples/next.js-with-ahead-of-time/package.json
+++ b/examples/next.js-with-ahead-of-time/package.json
@@ -9,7 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@master/css.webpack": "",
+        "@master/css-extractor.webpack": "",
         "@types/node": "^20.2.5",
         "@types/react": "^18.2.8",
         "@types/react-dom": "^18.2.4",
