--- a/examples/next.js-with-progressive-rendering/package.json
+++ b/examples/next.js-with-progressive-rendering/package.json
@@ -1,24 +1,24 @@
 {
-	"name": "next.js-with-progressive-rendering",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build && node ../../node_modules/@master/css/dist/cjs/bin render .next/**/*.html",
-		"start": "next start",
-		"lint": "next lint"
-	},
-	"dependencies": {
-		"@master/css": "",
-		"@master/css.react": "",
-		"@types/node": "^20.2.5",
-		"@types/react": "^18.2.8",
-		"@types/react-dom": "^18.2.4",
-		"eslint": "^8.42.0",
-		"eslint-config-next": "^13.4.4",
-		"next": "^13.4.4",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"typescript": "^5.1.3"
-	}
+    "name": "next.js-with-progressive-rendering",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build && mcss render '.next/**/*.html'",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@master/css-renderer": "",
+        "@master/css.react": "",
+        "@types/node": "^20.2.5",
+        "@types/react": "^18.2.8",
+        "@types/react-dom": "^18.2.4",
+        "eslint": "^8.42.0",
+        "eslint-config-next": "^13.4.4",
+        "next": "^13.4.4",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "typescript": "^5.1.3"
+    }
 }
