--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -15,7 +15,7 @@
     },
     "devDependencies": {
         "@master/css.react": "",
-        "@master/css.vite": "",
+        "@master/css-extractor.vite": "",
         "@types/react": "^18.0.27",
         "@types/react-dom": "^18.0.10",
         "@vitejs/plugin-react": "^3.1.0",
