--- a/examples/svelte-with-ahead-of-time/package.json
+++ b/examples/svelte-with-ahead-of-time/package.json
@@ -10,7 +10,7 @@
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
     },
     "devDependencies": {
-        "@master/css.vite": "",
+        "@master/css-extractor.vite": "",
         "@fontsource/fira-mono": "^4.5.10",
         "@neoconfetti/svelte": "^1.0.0",
         "@sveltejs/adapter-auto": "^2.0.0",
