--- a/examples/vue/package.json
+++ b/examples/vue/package.json
@@ -16,6 +16,6 @@
         "typescript": "^4.9.3",
         "vite": "^4.0.0",
         "vue-tsc": "^1.0.11",
-        "@master/css.vite": ""
+        "@master/css-extractor.vite": ""
     }
 }
