--- a/examples/webpack-with-ahead-of-time/package.json
+++ b/examples/webpack-with-ahead-of-time/package.json
@@ -13,7 +13,7 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@master/css.webpack": "^2.0.0-beta.159",
+        "@master/css-extractor.webpack": "",
         "html-webpack-plugin": "^5.5.1",
         "webpack": "^5.85.0",
         "webpack-cli": "^5.1.1",
